# ai_project

./: .gitignore  README.md  app.js  app.json  app.wxss  generate-background-video.py  generate-images.js  generate-video-with-gpt.py  generate_assets.sh  package-lock.json  package.json  run_claude_loop.sh
config/: config.js
difficulty_test/: CMakeLists.txt  DifficultyAnalyzer.cpp  DifficultyAnalyzer.h  Tile.cpp  Tile.h  difficulty_test  main.cpp
docs/: product-design.md  product-document.md  ui-interaction.html  产品文档.md  游戏机制.md  设计规范.md
game/: .gitignore  API_FIXES.md  DEV_GUIDE.md  PROJECT_DELIVERY.md  README.md  TEST_GUIDE.md  TROUBLESHOOTING.md  app.js  app.json  app.wxss  game.js  jest.config.js  package.json  project.config.json  quick_level_test.js  test_level_solvability.js
game_test/: README.md  comprehensive.test.js  constants.test.js  gameStateManager.test.js  gridClickMovement.test.js  levelManager.test.js  package.json  puzzleManager.test.js  setup.js  unit.test.js  unitManager.test.js
pages/: flight.test.js  login.test.js
simulation/: CMakeLists.txt  Makefile  README.md  build.sh  merge_levels.sh
simulation/src/: DifficultyAnalyzer.cpp  LevelExporter.cpp  LevelExporter.h  LevelValidator.cpp  PuzzleGenerator.cpp  PuzzleGenerator.h  PuzzleSolver.cpp  PuzzleSolver.h  Tile.cpp  Tile.h  Utils.cpp  Utils.h  main.cpp
simulation_json/: level_1.json  level_10.json  level_11.json  level_12.json  level_13.json  level_14.json  level_15.json  level_16.json  level_17.json  level_18.json  level_19.json  level_2.json  level_20.json  level_3.json  level_4.json  level_5.json  (+6 more)
(+132 files in other folders)
